--- a/Round4/Manuscript/preamble.tex
+++ b/Round4/Manuscript/preamble.tex
@@ -75,6 +75,7 @@
 \newcommand{\statistic}{\mathcal{T}}
 \DeclareMathOperator{\Tr}{Tr}
 \newcommand\given[1][]{\:#1\vert\:}
+\newcommand{\SNR}{\frac{n}{2}\Vert \mu \Vert^2_\Sigma}
 
 \newcommand{\citeJR}[1]{\citeauthor{#1} \citep{#1}}
 \newcommand{\citeJRfull}[1]{\citeauthor*{#1} \citep{#1}}
