--- a/Round4/Manuscript/permutaing_accuracy.tex
+++ b/Round4/Manuscript/permutaing_accuracy.tex
@@ -581,7 +581,7 @@ It can also be seen that power increases with the number of bootstrap replicatio
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\columnwidth]{"art/file13"}
-	\caption{
+	\caption{[TODO: replace oracle.cov caption]
 		\textbf{Bootstrap.}
 		The power of a permutation test with various test statistics. 
 		The power on the x-axis. 
@@ -830,7 +830,7 @@ This time, however, the winners are not the $T^2$ type statistics, but rather, t
 
 \subsection{Feature Mapping}
 It may be argued that only accuracy-tests permit the separation between classes in augmented feature spaces, such as in \emph{reproducing kernel Hilbert spaces} (RKHS).
-The \emph{Gretton} statistic \citep{gretton_kernel_2012-1}, is an example where a two-group test is performed after an implicit augmentation of $x$ to RKHS.
+The \emph{Gretton} statistic \citep{gretton_kernel_2012-1}, is an example where a two-group test is performed after an implicit augmentation of $x$ to some RKHS.
 We are also free, up to computational considerations, to augment the design matrix as we please. 
 The logistic regression in Section~\ref{sec:logistic} is such an example, where we analyzed the data both in the original space, and in an augmented space. 
 We thus disagree with the argument that accuracy-tests have more flexibility than two-group tests. 
